--- a/style.css
+++ b/style.css
@@ -23,13 +23,19 @@ h1 {
     font-family: 'Sui Generis';
     font-size: 30px;
 }
-div {
+header, div.styleddiv, main, footer {
     background-color: #606090aa;
     color:white;
     border-radius: 10px;
     padding:5px;
     margin:10px;
-  }
+}
+header.greydiv, div.greydiv, main.greydiv, footer.greydiv {
+    background-color: #0003;
+    border-radius: 10px;
+    padding:5px;
+    margin:10px;
+}
 body {
     background-color: #222;
 }
@@ -42,7 +48,7 @@ button {
     background-color:rgba(100, 214, 255, 0.58);
     border:0px;
     border-radius: 5px;
-    width:95%;
+    width:70%;
     height:50px;
     padding:5px;
     margin: 5px;
@@ -50,6 +56,13 @@ button {
 
 button:hover {
   background-color:rgb(0, 157, 255);
+}
+
+img.socialsIcon {
+    width:40px;
+    height:40px;
+    margin-left:10px;
+    margin-right:10px;
 }
  
 a {
