--- a/page-home.css
+++ b/page-home.css
@@ -5,12 +5,19 @@
 }
 .hero-logo {
     width: 30%;
-    max-width: 200px; /* Stop it from getting too big */
+    max-width: 250px; /* Stop it from getting too big */
     height: auto;
     margin-bottom: 20px;
 }
+.title {
+    font-family: Sui Generis, sans-serif;
+    font-style: italic;
+    font-size: 2.2em;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .subtitle {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, sans-serif;
     font-style: italic;
     font-size: 1.2em;
 }
