Update footer status

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -9,6 +9,7 @@
   </div>
   
   <div class="footer-col">
+    <h2>!We are looking for 3D visual artists!</h2>
     <h2>Contact Us (Business only)</h2>
     <a href="mailto:contact@pyroschockstudios.com">contact@pyroschockstudios.com</a>
   </div>
